# tgbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.vector.yaml  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: CHANGELOG.md  high-level-architecture-diagram.plantuml  project_overview.md
migrations/: env.py  script.py.mako
migrations/versions/: 0e7a8abff60d_create_content_table.py  2025_08_23_2031-8ffaba4d37bb_add_new_table_for_storing_full_user_.py  2025_08_23_2156-d7f30cdb2e67_add_users_chats_and_deliveries.py  2025_08_23_2253-f92871bcd939_allow_user_id_to_be_null_in_log_table.py  2df6976e3c09_title_to_text.py  379ce429434e_create_kv_table_for_google_doc_revision_.py  4103cc9ad149_add_text_digest_embedded_at_to_content.py
scripts/: seed_demo.py
src/: config.py  main.py
src/activity_log/: __init__.py  context.py  incoming.py  outgoing.py  repository.py
src/bot/: cache_layer.py  config.py  content_dao.py  db.py  embeddings.py  google_doc_loader.py  keyboard.py  logger.py  main.py  qdrant_client.py  qdrant_high_level_client.py  search_service.py  user_actions_log_middleware.py  user_router.py  utils_html.py
src/bot/renderers/: content_renderer.py
src/content/: __init__.py  models.py  parser.py  renderer.py
src/content_sync/: google_docs.py  models.py
src/content_sync/parsing/: parser.py
src/tools/: db.py  embeddings.py  google_doc_loader.py  logger.py  qdrant_high_level_client.py
tests/: conftest.py  test_content_dao.py  test_keyboard.py
tools/: dcl.ps1
(+9 files in other folders)
